<resources>
    <string name="app_name">Ukopia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="more_button_text">More</string>
    <string name="close_button_text">Close</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="copyright_text">Copyright</string>
    <string name="ukopia_logo_desc">Ukopia Logo</string>
    <string name="slogan_text">A Place for Coffee, Stories,\nand Inspiration to Meet</string>
    <string name="login_screen_title">LOGIN</string>
    <string name="register_screen_title">REGISTER</string>
    <string name="change_password_title">CHANGE\nPASSWORD</string>
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="fullname_label">Full Name</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="new_password_label">New Password</string>
    <string name="enter_email_hint">Enter Your Email</string>
    <string name="enter_name_hint">Enter Your Name</string>
    <string name="enter_username_hint">Enter Your Username</string>
    <string name="enter_fullname_hint">Enter Your Full Name</string>
    <string name="enter_password_hint">Enter Your Password</string>
    <string name="enter_new_password_hint">Enter Your New Password</string>
    <string name="forgot_password_button_text">Forgot Password?</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Register</string>
    <string name="login_button_text_login_activity">Login</string>
    <string name="signup_button_text_register_activity">Register</string>
    <string name="change_button_text">Change</string>
    <string name="no_account_prefix">Don\'t Have an Account? </string>
    <string name="create_account_clickable_part">Create an Account Here</string>
    <string name="verification_dialog_title">Email Verification</string>
    <string name="ok_button_text">OK</string>
    <string name="my_account_title">MY\nACCOUNT</string>
    <string name="profile_photo_desc">Profile Photo</string>
    <string name="name_not_found">Name not found</string>
    <string name="email_not_found">Email not found</string>
    <string name="settings_title">Settings</string>
    <string name="equipment_icon_desc">Equipment Icon</string>
    <string name="language_icon_desc">Language Icon</string>
    <string name="language_option">Language</string>
    <string name="support_us_title">Support Us</string>
    <string name="instagram_icon_desc">Instagram Icon</string>
    <string name="instagram_text">Instagram</string>
    <string name="ukopia_instagram_handle">#ukopiaindonesia</string>
    <string name="ruangseduhukopia">#ruangseduhukopia</string>
    <string name="youtube_icon_desc">Youtube Icon</string>
    <string name="youtube_text">Youtube</string>
    <string name="ukopia_youtube_channel">Ukopia Indonesia</string>
    <string name="account_options_title">Account Option</string>
    <string name="key_icon_desc">Key Icon</string>
    <string name="change_password_option">Change Password</string>
    <string name="logout_icon_desc">Logout Icon</string>
    <string name="logout_option">Logout</string>
    <string name="arrow_forward_desc">Arrow Forward</string>
    <string name="select_language">Select Language</string>
    <string name="language_english">English</string>
    <string name="language_indonesian">Indonesian</string>
    <string name="selected_icon_desc">Selected</string>
    <string name="error_listener_implementation">must implement OnAkunFragmentInteractionListener</string>
    <string name="logout_success_message">Logged out successfully!</string>
    <string name="password_change_success">Password changed successfully!</string>
    <string name="no_app_to_open_url">No app found to open this URL.</string>
    <string name="empty_email_password_error">Email and password cannot be empty!</string>
    <string name="error_email_empty">Email cannot be empty!</string>
    <string name="login_success_toast">Login successful!</string>
    <string name="user_not_found_error">User not found.</string>
    <string name="failed_retrieve_user_data_error">Failed to retrieve user data: </string>
    <string name="login_failed_error">Login failed: </string>
    <string name="all_fields_required_error">All fields must be filled</string>
    <string name="registration_success_message">Registration successful, please login</string>
    <string name="failed_save_data_error">Failed to save data: </string>
    <string name="registration_failed_error">Registration failed: </string>
    <string name="logged_out_toast">You have been logged out</string>
    <string name="error_brewing_method_unknown">Error: Brewing method unknown.</string>
    <string name="error_recipe_name_required">Recipe Name is required!</string>
    <string name="error_description_required">Description is required!</string>
    <string name="error_coffee_amount_required">Coffee Amount is required!</string>
    <string name="error_water_amount_required">Water Amount is required!</string>
    <string name="error_temperature_required">Temperature is required!</string>
    <string name="error_processing_time_required">Processing Time must be filled in completely!</string>
    <string name="error_complete_all_recipe_data">Please complete all prescription data!</string>
    <string name="recipe_saved_success_toast">Recipe \'%1$s\' saved successfully!</string>
    <string name="function_not_implemented_toast">Function not yet implemented</string>
    <string name="error_date_required">Date is required!</string>
    <string name="error_menu_name_required">Menu Name is required!</string>
    <string name="error_coffee_bean_name_required">Coffee bean name is required!</string>
    <string name="error_menu_required">Menu is required!</string>
    <string name="error_name_required">Name is required!</string>
    <string name="loyalty_data_added_success">Data added successfully</string>
    <string name="error_no_rating_selected">Please select your rating star!</string>
    <string name="menu_review_title">MENU\nREVIEW</string>
    <string name="filter_button_text">Filter</string>
    <string name="category_all">All</string>
    <string name="category_black_coffee">Black Coffee</string>
    <string name="category_white_coffee">White Coffee</string>
    <string name="category_non_coffee">Non Coffee</string>
    <string name="category_artisan_tea">Artisan Tea</string>
    <string name="category_flavoured_milk">Flavoured Milk</string>
    <string name="menu_item_title_placeholder">Coffee Latte</string>
    <string name="menu_item_rating_placeholder">4.8/5.0</string>
    <string name="back_button_desc">Back button</string>
    <string name="share_button_desc">Share button</string>
    <string name="description_title">Description: </string>
    <string name="menu_item_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="your_rating_prefix">Your Rating: </string>
    <string name="star_suffix"> Star</string>
    <string name="comment_prefix">Comment: </string>
    <string name="comment_placeholder_text">This coffee is amazing!</string>
    <string name="no_menu_to_share_message">No menu to share!</string>
    <string name="rate_for_prefix">Rate for: </string>
    <string name="menu_placeholder">Menu</string>
    <string name="share_via_chooser_title">Share via:</string>
    <string name="submit_rating_button_text">Submit Rating</string>
    <string name="enter_comment_hint">Enter your comment...</string>
    <string name="choose_category_title">Choose Category</string>
    <string name="share_menu_item_text">Let\'s try %1$s at Ukopia!\nRating: %2$s\nDescription: %3$s\n#Ukopia #CoffeeLover</string>
    <string name="coffee_recipe_title">COFFEE RECIPE</string>
    <string name="recipe_image_desc">Recipe Image</string>
    <string name="brew_method_name_placeholder">AEROPRESS</string>
    <string name="recipe_list_title">RECIPE\nLIST</string>
    <string name="no_recipes_available">No recipes</string>
    <string name="add_new_recipes_prompt">Please add new recipes.</string>
    <string name="no_my_recipes_added_yet">No recipes have been added yet.</string>
    <string name="all_recipes_button_text">All Recipes</string>
    <string name="my_recipe_button_text">My Recipe</string>
    <string name="recipe_title_placeholder">2018 Winner - Inverted</string>
    <string name="recipe_description_placeholder">Prepare 40 grams of water at room temperature. Use paper filter. Rinse with hot water.</string>
    <string name="water_icon_desc">Water Icon</string>
    <string name="coffee_bean_icon_desc">Coffee Bean Icon</string>
    <string name="timer_icon_desc">Timer Icon</string>
    <string name="add_recipe_fab_desc">Add recipe</string>
    <string name="add_recipe_title">ADD RECIPE</string>
    <string name="recipe_name_label">Recipe Name</string>
    <string name="recipe_name_hint">Recipe Name</string>
    <string name="description_label">Description</string>
    <string name="description_hint">Description</string>
    <string name="coffee_amount_label">Coffee Amount</string>
    <string name="water_amount_label">Water Amount</string>
    <string name="grind_size_label">Grind Size</string>
    <string name="temperature_label">Temperature</string>
    <string name="process_label">PROCESS</string>
    <string name="process_time_hint">00:00</string>
    <string name="add_new_step_button_text">Add New Step</string>
    <string name="add_step_icon_desc">Add Step</string>
    <string name="add_recipe_button_text">Add Recipe</string>
    <string name="coffee_amount_hint_placeholder">16.0 g</string>
    <string name="water_amount_hint_placeholder">200.0 ml</string>
    <string name="temperature_hint_placeholder">90 °C</string>
    <string-array name="grind_sizes">
        <item>Fine</item>
        <item>Medium-Fine</item>
        <item>Medium</item>
        <item>Medium-Coarse</item>
        <item>Coarse</item>
    </string-array>
    <string name="recipe_details_title">RECIPE\nDETAILS</string>
    <string name="coffee_icon_desc">Coffee Icon</string>
    <string name="grind_size_icon_desc">Grind Size Icon</string>
    <string name="heat_icon_desc">Heat Icon</string>
    <string name="extraction_time_label">Extraction Time</string>
    <string name="grind_size_placeholder">Medium</string>
    <string name="temperature_placeholder">92°C</string>
    <string name="water_amount_placeholder">200.0 ml</string>
    <string name="coffee_amount_placeholder">35.0 g</string>
    <string name="extraction_time_placeholder">01:45</string>
    <string name="add_new_step_title">ADD NEW STEP</string>
    <string name="custom_step_title">Custom Step</string>
    <string name="custom_step_name_label">Step Name</string>
    <string name="custom_step_name_hint">Enter custom step name</string>
    <string name="duration_label">Duration</string>
    <string name="duration_hint_seconds">Duration (seconds)</string>
    <string name="non_coffee_menu_name_label">Non-Coffee Menu Name</string>
    <string name="non_coffee_item_name_label">Non-Coffee Item Name</string>
    <string name="menu_hint">Menu</string>
    <string name="name_hint">Name</string>
    <string name="login_required_title">Login Required</string>
    <string name="login_required_message">You need to log in to proceed with this action.</string>
    <string name="give_rating_title">GIVE RATING</string>
    <string name="rate_for_placeholder">Rate for: Coffee Latte</string>
</resources>