<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/non_coffee_menu_name_label"
    android:textSize="18sp"
    android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextMenuNonKopi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:hint="@string/menu_hint"
    android:inputType="text"
    android:padding="10dp"
    android:textColor="@color/black"
    android:textColorHint="@color/light_grey"
    android:textSize="16sp"
    android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/non_coffee_item_name_label"
    android:textSize="18sp"
    android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNamaNonKopi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:hint="@string/name_hint"
    android:inputType="text"
    android:padding="10dp"
    android:textColor="@color/black"
    android:textColorHint="@color/light_grey"
    android:textSize="16sp" />
</LinearLayout>