<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_step_name_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editTextCustomStepTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/custom_step_name_hint"
        android:inputType="textCapWords"
        android:background="@drawable/edit_text_border"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/labelDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editTextCustomStepDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/duration_hint_seconds"
        android:inputType="number"
        android:background="@drawable/edit_text_border"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        android:textSize="16sp"/>

</LinearLayout>