<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewRecipeInfoContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:id="@+id/recipe_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/recipe_title_placeholder" />

        <TextView
            android:id="@+id/tv_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="@string/recipe_description_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutWaterAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/water_icon_desc"
                    android:src="@drawable/ic_water_white" />
                <TextView
                    android:id="@+id/tv_water_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/white"
                    tools:text="@string/water_amount_placeholder" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCoffeeAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/coffee_bean_icon_desc"
                    android:src="@drawable/ic_bean_coffee"
                    app:tint="@color/white" />
                <TextView
                    android:id="@+id/tv_coffee_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/white"
                    tools:text="@string/coffee_amount_placeholder" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTimer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp"
                >
                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:contentDescription="@string/timer_icon_desc"
                    android:src="@drawable/ic_timer" />
                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/white"
                    tools:text="12"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>